[tool.poetry]
name = "goit-hm-web-09"
version = "0.1.0"
description = ""
authors = ["Hnatiak <58102343+Hnatiak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.28.2"
scrapy = "^2.11.1"
pika = "^1.3.2"
faker = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
